--- a/test-output/index.html
+++ b/test-output/index.html
@@ -25,7 +25,7 @@
       <span class="top-banner-title-font">Test results</span>
       <button id="button" class="button">Switch Retro Theme</button> <!-- button -->
       <br/>
-      <span class="top-banner-font-1">1 suite, 1 failed test</span>
+      <span class="top-banner-font-1">1 suite</span>
     </div> <!-- top-banner-root -->
     <div class="navigator-root">
       <div class="navigator-suite-header">
@@ -39,7 +39,7 @@
         <div class="rounded-window">
           <div class="suite-header light-rounded-window-top">
             <a href="#" panel-name="suite-Default_suite" class="navigator-link">
-              <span class="suite-name border-failed">Default suite</span>
+              <span class="suite-name border-passed">Default suite</span>
             </a> <!-- navigator-link -->
           </div> <!-- suite-header light-rounded-window-top -->
           <div class="navigator-suite-content">
@@ -50,7 +50,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
-                    <span>C:\Users\surya\AppData\Local\Temp\testng-eclipse--249049574\testng-customsuite.xml</span>
+                    <span>C:\Users\surya\AppData\Local\Temp\testng-eclipse--333342074\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -92,21 +92,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">4 methods, 1 failed,   3 passed</span>
-                  </li>
-                  <li>
-                    <span class="method-list-title failed">Failed methods</span>
-                    <span class="show-or-hide-methods failed">
-                      <a href="#" panel-name="suite-Default_suite" class="hide-methods failed suite-Default_suite"> (hide)</a> <!-- hide-methods failed suite-Default_suite -->
-                      <a href="#" panel-name="suite-Default_suite" class="show-methods failed suite-Default_suite"> (show)</a> <!-- show-methods failed suite-Default_suite -->
-                    </span>
-                    <div class="method-list-content failed suite-Default_suite">
-                      <span>
-                        <img src="failed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="tests.TC_003_AddContactTest" class="method navigator-link" hash-for-method="addcontactTest(Sai, Madhi, 2005/05/05, sai123@gmail.com, 9876512240, Arul Nagar, 2nd street, Chennai, TamilNadu, 60...)">addcontactTest(Sai, Madhi, 2005/05/05, sai123@gmail.com, 9876512240, Arul Nagar, 2nd street, Chennai, TamilNadu, 60...)</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                    </div> <!-- method-list-content failed suite-Default_suite -->
+                    <span class="method-stats">1 method,   1 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -117,17 +103,7 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="tests.TC_003_AddContactTest" class="method navigator-link" hash-for-method="addcontactTest(Sai, Madhi, 2005/05/05, sai123@gmail.com, 9876512240, Arul Nagar, 2nd street, Chennai, TamilNadu, 60...)">addcontactTest(Sai, Madhi, 2005/05/05, sai123@gmail.com, 9876512240, Arul Nagar, 2nd street, Chennai, TamilNadu, 60...)</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="tests.TC_003_AddContactTest" class="method navigator-link" hash-for-method="addcontactTest(, , 1995/12/25, srinithi@gmail.com, 9885433211, Gandhi nagar, Adayar, Chennai, TamilNadu, 600094, In...)">addcontactTest(, , 1995/12/25, srinithi@gmail.com, 9885433211, Gandhi nagar, Adayar, Chennai, TamilNadu, 600094, In...)</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="tests.TC_003_AddContactTest" class="method navigator-link" hash-for-method="addcontactTest(satya, karthik, 1992/04/21, satya@gmail.com, abcdef, sakthi nagar, 3rd street, Chennai, TamilNadu, 6...)">addcontactTest(satya, karthik, 1992/04/21, satya@gmail.com, abcdef, sakthi nagar, 3rd street, Chennai, TamilNadu, 6...)</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="tests.TC_008_UiTest" class="method navigator-link" hash-for-method="UiTest">UiTest</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -142,87 +118,17 @@
     <div class="wrapper">
       <div class="main-panel-root">
         <div panel-name="suite-Default_suite" class="panel Default_suite">
-          <div class="suite-Default_suite-class-failed">
-            <div class="main-panel-header rounded-window-top">
-              <img src="failed.png"/>
-              <span class="class-name">tests.TC_003_AddContactTest</span>
-            </div> <!-- main-panel-header rounded-window-top -->
-            <div class="main-panel-content rounded-window-bottom">
-              <div class="method">
-                <div class="method-content">
-                  <a name="addcontactTest(Sai, Madhi, 2005/05/05, sai123@gmail.com, 9876512240, Arul Nagar, 2nd street, Chennai, TamilNadu, 60...)">
-                  </a> <!-- addcontactTest(Sai, Madhi, 2005/05/05, sai123@gmail.com, 9876512240, Arul Nagar, 2nd street, Chennai, TamilNadu, 60...) -->
-                  <span class="method-name">addcontactTest</span>
-                  <span class="parameters">(Sai,Madhi,2005/05/05,sai123@gmail.com,9876512240,Arul Nagar,2nd street,Chennai,TamilNadu,600094,India,duplicateContact,Sai Madhi)</span>
-                  <div class="stack-trace">java.lang.AssertionError: Expected 2 contacts with the same email, but found 2 expected [6] but found [2]
-	at org.testng.Assert.fail(Assert.java:111)
-	at org.testng.Assert.failNotEquals(Assert.java:1590)
-	at org.testng.Assert.assertEqualsImpl(Assert.java:150)
-	at org.testng.Assert.assertEquals(Assert.java:132)
-	at org.testng.Assert.assertEquals(Assert.java:1431)
-	at org.testng.Assert.assertEquals(Assert.java:1395)
-	at tests.TC_003_AddContactTest.ValidateAddContact(TC_003_AddContactTest.java:68)
-	at tests.TC_003_AddContactTest.addcontactTest(TC_003_AddContactTest.java:43)
-	at java.base/jdk.internal.reflect.DirectMethodHandleAccessor.invoke(DirectMethodHandleAccessor.java:103)
-	at java.base/java.lang.reflect.Method.invoke(Method.java:580)
-	at org.testng.internal.invokers.MethodInvocationHelper.invokeMethod(MethodInvocationHelper.java:141)
-	at org.testng.internal.invokers.TestInvoker.invokeMethod(TestInvoker.java:687)
-	at org.testng.internal.invokers.TestInvoker.invokeTestMethod(TestInvoker.java:230)
-	at org.testng.internal.invokers.MethodRunner.runInSequence(MethodRunner.java:63)
-	at org.testng.internal.invokers.TestInvoker$MethodInvocationAgent.invoke(TestInvoker.java:995)
-	at org.testng.internal.invokers.TestInvoker.invokeTestMethods(TestInvoker.java:203)
-	at org.testng.internal.invokers.TestMethodWorker.invokeTestMethods(TestMethodWorker.java:154)
-	at org.testng.internal.invokers.TestMethodWorker.run(TestMethodWorker.java:134)
-	at java.base/java.util.ArrayList.forEach(ArrayList.java:1596)
-	at org.testng.TestRunner.privateRun(TestRunner.java:741)
-	at org.testng.TestRunner.run(TestRunner.java:616)
-	at org.testng.SuiteRunner.runTest(SuiteRunner.java:421)
-	at org.testng.SuiteRunner.runSequentially(SuiteRunner.java:413)
-	at org.testng.SuiteRunner.privateRun(SuiteRunner.java:373)
-	at org.testng.SuiteRunner.run(SuiteRunner.java:312)
-	at org.testng.SuiteRunnerWorker.runSuite(SuiteRunnerWorker.java:52)
-	at org.testng.SuiteRunnerWorker.run(SuiteRunnerWorker.java:95)
-	at org.testng.TestNG.runSuitesSequentially(TestNG.java:1274)
-	at org.testng.TestNG.runSuitesLocally(TestNG.java:1208)
-	at org.testng.TestNG.runSuites(TestNG.java:1112)
-	at org.testng.TestNG.run(TestNG.java:1079)
-	at org.testng.remote.AbstractRemoteTestNG.run(AbstractRemoteTestNG.java:115)
-	at org.testng.remote.RemoteTestNG.initAndRun(RemoteTestNG.java:293)
-	at org.testng.remote.RemoteTestNG.main(RemoteTestNG.java:91)
-
-</div> <!-- stack-trace -->
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-            </div> <!-- main-panel-content rounded-window-bottom -->
-          </div> <!-- suite-Default_suite-class-failed -->
           <div class="suite-Default_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">tests.TC_003_AddContactTest</span>
+              <span class="class-name">tests.TC_008_UiTest</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="addcontactTest(Sai, Madhi, 2005/05/05, sai123@gmail.com, 9876512240, Arul Nagar, 2nd street, Chennai, TamilNadu, 60...)">
-                  </a> <!-- addcontactTest(Sai, Madhi, 2005/05/05, sai123@gmail.com, 9876512240, Arul Nagar, 2nd street, Chennai, TamilNadu, 60...) -->
-                  <span class="method-name">addcontactTest</span>
-                  <span class="parameters">(Sai,Madhi,2005/05/05,sai123@gmail.com,9876512240,Arul Nagar,2nd street,Chennai,TamilNadu,600094,India,ContactIsAdded,Sai Madhi)</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="addcontactTest(, , 1995/12/25, srinithi@gmail.com, 9885433211, Gandhi nagar, Adayar, Chennai, TamilNadu, 600094, In...)">
-                  </a> <!-- addcontactTest(, , 1995/12/25, srinithi@gmail.com, 9885433211, Gandhi nagar, Adayar, Chennai, TamilNadu, 600094, In...) -->
-                  <span class="method-name">addcontactTest</span>
-                  <span class="parameters">(,,1995/12/25,srinithi@gmail.com,9885433211,Gandhi nagar,Adayar,Chennai,TamilNadu,600094,India,EmptyField,Contact validation failed: firstName: Path `firstName` is required., lastName: Path `lastName` is required.)</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="addcontactTest(satya, karthik, 1992/04/21, satya@gmail.com, abcdef, sakthi nagar, 3rd street, Chennai, TamilNadu, 6...)">
-                  </a> <!-- addcontactTest(satya, karthik, 1992/04/21, satya@gmail.com, abcdef, sakthi nagar, 3rd street, Chennai, TamilNadu, 6...) -->
-                  <span class="method-name">addcontactTest</span>
-                  <span class="parameters">(satya,karthik,1992/04/21,satya@gmail.com,abcdef,sakthi nagar,3rd street,Chennai,TamilNadu,600094,India,InvalidPhoneNumber,Contact validation failed: phone: Phone number is invalid)</span>
+                  <a name="UiTest">
+                  </a> <!-- UiTest -->
+                  <span class="method-name">UiTest</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -230,7 +136,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\surya\AppData\Local\Temp\testng-eclipse--249049574\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\surya\AppData\Local\Temp\testng-eclipse--333342074\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -239,11 +145,7 @@
 &lt;suite name=&quot;Default suite&quot; guice-stage=&quot;DEVELOPMENT&quot;&gt;
   &lt;test thread-count=&quot;5&quot; name=&quot;Default test&quot; verbose=&quot;2&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;tests.TC_003_AddContactTest&quot;&gt;
-        &lt;methods&gt;
-          &lt;include name=&quot;addcontactTest&quot;/&gt;
-        &lt;/methods&gt;
-      &lt;/class&gt; &lt;!-- tests.TC_003_AddContactTest --&gt;
+      &lt;class name=&quot;tests.TC_008_UiTest&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -283,28 +185,16 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(4);
+data.addRows(1);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'addcontactTest')
-data.setCell(0, 2, 'tests.TC_003_AddContactTest')
-data.setCell(0, 3, 4034);
-data.setCell(1, 0, 1)
-data.setCell(1, 1, 'addcontactTest')
-data.setCell(1, 2, 'tests.TC_003_AddContactTest')
-data.setCell(1, 3, 4005);
-data.setCell(2, 0, 2)
-data.setCell(2, 1, 'addcontactTest')
-data.setCell(2, 2, 'tests.TC_003_AddContactTest')
-data.setCell(2, 3, 3111);
-data.setCell(3, 0, 3)
-data.setCell(3, 1, 'addcontactTest')
-data.setCell(3, 2, 'tests.TC_003_AddContactTest')
-data.setCell(3, 3, 3059);
+data.setCell(0, 1, 'UiTest')
+data.setCell(0, 2, 'tests.TC_008_UiTest')
+data.setCell(0, 3, 2991);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 14 seconds</span>
+              <span class="suite-total-time">Total running time: 2 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -330,60 +220,18 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">tests.TC_003_AddContactTest</div> <!-- chronological-class-name -->
-              <div class="configuration-test before">
-                <span class="method-name">setup</span>
+              <div class="chronological-class-name">tests.TC_008_UiTest</div> <!-- chronological-class-name -->
+              <div class="configuration-method before">
+                <span class="method-name">browserLaunchAndUrlLoad</span>
                 <span class="method-start">0 ms</span>
-              </div> <!-- configuration-test before -->
-              <div class="configuration-method before">
-                <span class="method-name">browserLaunchAndUrlLoad</span>
-                <span class="method-start">1069 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
-                <span class="method-name">addcontactTest(Sai, Madhi, 2005/05/05, sai123@gmail.com, 9876512240, Arul Nagar, 2nd street, Chennai, TamilNadu, 60...)</span>
-                <span class="method-start">7188 ms</span>
+                <span class="method-name">UiTest</span>
+                <span class="method-start">4293 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">closeBrowser</span>
-                <span class="method-start">11199 ms</span>
-              </div> <!-- configuration-method after -->
-              <div class="configuration-method before">
-                <span class="method-name">browserLaunchAndUrlLoad</span>
-                <span class="method-start">11606 ms</span>
-              </div> <!-- configuration-method before -->
-              <div class="test-method">
-                <span class="method-name">addcontactTest(, , 1995/12/25, srinithi@gmail.com, 9885433211, Gandhi nagar, Adayar, Chennai, TamilNadu, 600094, In...)</span>
-                <span class="method-start">14656 ms</span>
-              </div> <!-- test-method -->
-              <div class="configuration-method after">
-                <span class="method-name">closeBrowser</span>
-                <span class="method-start">17770 ms</span>
-              </div> <!-- configuration-method after -->
-              <div class="configuration-method before">
-                <span class="method-name">browserLaunchAndUrlLoad</span>
-                <span class="method-start">18072 ms</span>
-              </div> <!-- configuration-method before -->
-              <div class="test-method">
-                <span class="method-name">addcontactTest(satya, karthik, 1992/04/21, satya@gmail.com, abcdef, sakthi nagar, 3rd street, Chennai, TamilNadu, 6...)</span>
-                <span class="method-start">21124 ms</span>
-              </div> <!-- test-method -->
-              <div class="configuration-method after">
-                <span class="method-name">closeBrowser</span>
-                <span class="method-start">24185 ms</span>
-              </div> <!-- configuration-method after -->
-              <div class="configuration-method before">
-                <span class="method-name">browserLaunchAndUrlLoad</span>
-                <span class="method-start">24509 ms</span>
-              </div> <!-- configuration-method before -->
-              <div class="test-method">
-                <img src="failed.png">
-                </img>
-                <span class="method-name">addcontactTest(Sai, Madhi, 2005/05/05, sai123@gmail.com, 9876512240, Arul Nagar, 2nd street, Chennai, TamilNadu, 60...)</span>
-                <span class="method-start">27587 ms</span>
-              </div> <!-- test-method -->
-              <div class="configuration-method after">
-                <span class="method-name">closeBrowser</span>
-                <span class="method-start">31626 ms</span>
+                <span class="method-start">7287 ms</span>
               </div> <!-- configuration-method after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
